--- a/index.html
+++ b/index.html
@@ -5,11 +5,50 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Interpunkcija</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/9d6976f155.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <textarea name="correct" id="correct" cols="30" rows="10" spellcheck="false"></textarea>
-    <textarea name="wrong" id="wrong" cols="30" rows="10" spellcheck="false"></textarea>
+    <main>
+        <h1>Mācies interpunkciju</h1>
+        <p>Mācies interupunkciju, lasot Aleksandra Grīna romānu "Dvēseļu putenis".</p>
+        <button id="start">Sākt!</button>
+    </main>
 
+    <section id="game-container" style="display: none;">
+        <nav class="buttons-container">
+            <button id="back">Atpakaļ</button>
+            <div class="progress-bar">
+                <progress id="progress" value="0" max="10994"></progress>
+            </div>
+            <i class="fa-solid fa-circle-info"></i>
+        </nav>
+
+        <div class="checker-container">
+            <div class="correct-container">
+                <i class="fa-solid fa-circle-check"></i>
+            </div>
+            <div class="wrong-container">
+                <i class="fa-solid fa-circle-xmark"></i>
+            </div>
+        </div>
+
+        <div class="text-container">
+            <span role="textbox" id="wrong" spellcheck="false" contenteditable></span>
+        </div>
+
+        <footer class="footer-buttons-container">
+            <button id="previous">Iepriekšējāis</button>
+            <div class="mdiddle-container">
+                <button id="check">Pārbaudīt</button>
+                <button id="reset">Atiestatīt</button>
+                <button id="answer">Atbilde</button>
+            </div>
+            <button id="next">Nākamais</button>
+        </footer>
+    </section>
     <script src="index.js"></script>
 </body>
 </html>
