--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
             <div class="progress-bar">
                 <progress id="progress" value="0" max="10994"></progress>
             </div>
-            <i class="fa-solid fa-circle-info"></i>
         </nav>
 
         <div class="checker-container">
@@ -37,6 +36,7 @@
         </div>
 
         <div class="text-container">
+            <span role="textbox" id="correct" spellcheck="false" style="display: none;"></span>
             <span role="textbox" id="wrong" spellcheck="false" contenteditable></span>
         </div>
 
