--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
 
         <footer class="footer-buttons-container">
-            <button id="previous">Iepriekšējāis</button>
+            <button id="previous">Iepriekšējais</button>
             <div class="mdiddle-container">
                 <button id="check">Pārbaudīt</button>
                 <button id="reset">Atiestatīt</button>
